force-app/main/default/objects/custom_create64__c/custom_create64__c.object-meta.xml
<CustomObject>
    <label>Custom created object64</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects64</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>