force-app/main/default/objects/custom_create64__c/fields/custom_create_64field532__c.field-meta.xml
<CustomField>
    <fullName>custom_create_64field532__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 64field532</label>
    <type>Checkbox</type>
</CustomField>